# RanFiNG

./: CMakeLists.txt  body.h  class_diagramm.drawio  fiber.cpp  fiber.h  main.cpp  model.cpp  model.h
